--- a/index.html
+++ b/index.html
@@ -407,33 +407,22 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://github.com/Pritam0018/Bike-Helmet-Detection-YOLOV8" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Real Time Helmet Detection using Machine Learning</a></h3>
+                <h3 class="heading"><a href="https://github.com/Pritam0018/Bike-Helmet-Detection-YOLOV8">Real Time Helmet Detection using Machine Learning</a></h3>
                 <p>Developed a Helmet Detection Model by Custom Training and Fine Tuning of YOLO_V5 using problem Dataset.  </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Image Recognition using Deep Learning & Computer Vision </a></h3>
-                <p>Built an image recognition model trained over the dataset to conclude 1 to 5 hand gesture images using Neural Networks.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/Pritam0018/POWER-BI-Projects" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Credit Card Financial dashboard</a></h3>
+                <h3 class="heading"><a href="https://github.com/Pritam0018/POWER-BI-Projects">Power BI Credit Card Financial dashboard</a></h3>
                 <p>Designed a power bi dashboard for analyze Credit Card Frauds of all Banks acorss India.</p>
               </div>
             </div>
@@ -444,11 +433,11 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/Pritam0018/Movie_Recommender_System" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Movie Recommendation System using Machine Learning  </a></h3>
+				  <h3 class="heading"><a href="https://github.com/Pritam0018/Movie_Recommender_System">Movie Recommendation System using Machine Learning  </a></h3>
 				  <p>Developed a Recommendation Machine Learning Model On IMDB Dataset using Collaborative Filtering and Cosine Symmetry Metric.</p>
 				</div>
 			  </div>
